--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </div>
 
     <div class="first">
         <div class="first-left">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the 
+            <div class="hero">This website is awesome</div>
+            <div class="second-hero">This website has some subtext that goes here under the 
                 main title. It's a smaller font and the color is lower contrast.
             </div>
             <button class="signup-button">Sign up</button>
@@ -49,20 +56,18 @@
     </div>
 
     <div class="third">
-        <div>This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
+        <div class="quote">This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </div>
-        <div>-Thor, God of Thunder</div>
+        <div class="author">-Thor, God of Thunder</div>
     </div>
 
     <div class="fourth">
-        <div>
-            <div>
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
-            </div>
-            <button>Sing up</button>
+        <div class="container">
+            <div class="title">Call to action! It's time!</div>
+            <div class="text">Sign up for our product by clicking that button right over there!</div>
         </div>
+        <button>Sign up</button>
     </div>
 
     <div class="footer">
